fix a strange ie9 z-index bug

--- a/src/imagoCrop.css
+++ b/src/imagoCrop.css
@@ -47,6 +47,7 @@
 	bottom: 0;
 	right: 0;
 	z-index: 40;
+	background: rgba(0,0,0,0);
 }
 
 .crop__handlers__move {
